# oxdork

./: Dockerfile  LICENSE  README.md  dork  dork.py  dork_lite  dork_queries.txt  dorks.txt  oxdork  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql.yml  python-publish.yml
0xdork/: dork
0xdork/assets/: banner.py  colors.py
0xdork/core/: __main__.py
0xdork/resources/: headers.py
0xdork_lite/: dork_lite.sh
assets/: banner.py  colors.py
core/: __main__.py
dork_queries/: dork_queries.txt
lib/: banner.py  colors.py
oxdork/: __main__.py  banner.py  config.py  main.py  oxdork.py  setup.py
oxdork/data/: data.json
oxdork/lib/: banner.py  colors.py  config.py  oxdork.py
oxlite/: oxlite  oxlite.sh
src/: .__main__.sh  __main__.py  main.py
