[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = [
    {path = "oxdork/data/data.json"}
]

name = "oxdork"
version = "3.2.0"
description = "Google dorking tool."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT License"
homepage = "https://github.com/rly0nheart/oxdork"
documentation = "https://github.com/rly0nheart/oxdork/wiki/"
repository = "https://github.com/rly0nheart/oxdork.git"
keywords = ["python", "osint", "google-dorking", "osint", "inurl", "intext", "intitle"]
authors = ["Richard Mwewa <rly0nheart@duck.com>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  ""
]

[tool.poetry.dependencies]
rich = "*"
google = "*"


[tool.poetry.scripts]
oxdork = "oxdork.main:run"
